fixed issue 32 with text overlapping cover

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -961,6 +961,7 @@ nav li > input[type="checkbox"] {
 	display: flex;
 	-webkit-flex-flow: row;
 	flex-direction: row;
+	flex-shrink: 0;
 }
 .cover-header > a {
 	display: block;
